<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Hobbit Utils</string>
    <string name="action_settings">Settings</string>
    <string name="tab_troop_training">T1 training</string>
    <string name="t1_foot_elves">Elven Militia</string>
    <string name="t1_ranged_elves">Elven Archers</string>
    <string name="t1_mounted_elves">Mounted Elves</string>
    <string name="training_accept_button">Calculate</string>
    <string name="resource_food">Food</string>
    <string name="resource_wood">Wood</string>
    <string name="resource_stone">Stone</string>
    <string name="resource_ore">Ore</string>
    <string name="player_resources">Available resources (in thousands):</string>
    <string name="troops_calc_result_caption">Build this troops:</string>
    <string name="pref_t1_foot_cost">T1 foot unit cost</string>
    <string name="pref_t1_ranged_cost">T1 ranged unit cost</string>
    <string name="pref_t1_mounted_unit_cost">T1 mounted unit cost</string>
    <string name="title_activity_unit_cost_settings_fragment">UnitCostSettingsFragment</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_troops_calc_result">TroopsCalcResultActivity</string>
    <string name="number_placeholder">100</string>
    <string name="t1_foot_elves_icon_name">t1elvenfoot</string>
    <string name="t1_ranged_elves_icon_name">t1elvenranged</string>
    <string name="t1_mounted_elves_icon_name">t1elvenmounted</string>
    <string name="resource_food_icon">food</string>
    <string name="resource_wood_icon">wood</string>
    <string name="resource_stone_icon">stone</string>
    <string name="resource_ore_icon">ore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
