<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_t1_foot_cost"
        android:key="pref_key_storage_settings">
        
        <EditTextPreference 
            android:key="pref_t1_foot_food_cost"
            android:title="@string/resource_food"
            android:defaultValue="150"/>
        
        <EditTextPreference 
            android:key="pref_t1_foot_wood_cost"
            android:title="@string/resource_wood"
            android:defaultValue="220"/>
        
        <EditTextPreference 
            android:key="pref_t1_foot_stone_cost"
            android:title="@string/resource_stone"
            android:defaultValue="100"/>
        
        <EditTextPreference 
            android:key="pref_t1_foot_ore_cost"
            android:title="@string/resource_ore"
            android:defaultValue="50"/>
                       
    </PreferenceCategory>
    
    <PreferenceCategory
        android:title="@string/pref_t1_mounted_unit_cost"
        android:key="pref_key_storage_settings">
        
        <EditTextPreference 
            android:key="pref_t1_mounted_food_cost"
            android:title="@string/resource_food"
            android:defaultValue="150"/>
        
        <EditTextPreference 
            android:key="pref_t1_mounted_wood_cost"
            android:title="@string/resource_wood"
            android:defaultValue="110"/>
        
        <EditTextPreference 
            android:key="pref_t1_mounted_stone_cost"
            android:title="@string/resource_stone"
            android:defaultValue="50"/>
        
        <EditTextPreference 
            android:key="pref_t1_mounted_ore_cost"
            android:title="@string/resource_ore"
            android:defaultValue="200"/>
                
    </PreferenceCategory>    
    
    <PreferenceCategory
        android:title="@string/pref_t1_ranged_cost"
        android:key="pref_key_storage_settings">
        
        <EditTextPreference 
            android:key="pref_t1_ranged_food_cost"
            android:title="@string/resource_food"
            android:defaultValue="150"/>
        
        <EditTextPreference 
            android:key="pref_t1_ranged_wood_cost"
            android:title="@string/resource_wood"
            android:defaultValue="55"/>
        
        <EditTextPreference 
            android:key="pref_t1_ranged_stone_cost"
            android:title="@string/resource_stone"
            android:defaultValue="200"/>
        
        <EditTextPreference 
            android:key="pref_t1_ranged_ore_cost"
            android:title="@string/resource_ore"
            android:defaultValue="100"/> 
                   
    </PreferenceCategory>        
</PreferenceScreen>