<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout_id"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:background="@drawable/background"
    android:columnCount="2"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$FragmentTroopTraining" >

    <TextView
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_row="0"
        android:text="@string/player_resources"
        android:textColor="#FFFFFF"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="0dp"     
        android:layout_marginRight="4dp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <com.rocktail.hobbitutils.activities.PlayerResourceView
        android:id="@+id/foodPlayerResource"
        android:layout_width="150dp"
        android:layout_height="72dp"
        android:layout_marginBottom="10dp"
        android:layout_row="1"
        android:layout_column="0"/>
        
    <com.rocktail.hobbitutils.activities.PlayerResourceView
        android:id="@+id/woodPlayerResource"
        android:layout_width="150dp"
        android:layout_height="72dp"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:layout_row="1"
        android:layout_column="1"/>
    
    <com.rocktail.hobbitutils.activities.PlayerResourceView
        android:id="@+id/stonePlayerResource"
        android:layout_width="150dp"
        android:layout_height="72dp"
        android:layout_marginBottom="10dp"
        android:layout_row="2"
        android:layout_column="0"/>
    
    <com.rocktail.hobbitutils.activities.PlayerResourceView
        android:id="@+id/orePlayerResource"
        android:layout_width="150dp"
        android:layout_height="72dp"
        android:layout_gravity="right"
        android:layout_marginBottom="10dp"
        android:layout_row="2"
        android:layout_column="1"/>
        
    <ImageButton
        android:id="@+id/accept_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_row="3"
        android:adjustViewBounds="false"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/training_accept_button"
        android:cropToPadding="false"
        android:src="@drawable/acceptbutton64" />

    <ImageView
        android:id="@+id/t1FootImageView"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_column="0"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_row="4"
        android:contentDescription="@string/t1_foot_elves"
        android:src="@drawable/t1elvenfoot" />

    <ImageView
        android:id="@+id/t1MountedImageView"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_column="0"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_row="5"
        android:contentDescription="@string/t1_mounted_elves"
        android:src="@drawable/t1elvenmounted" />

    <ImageView
        android:id="@+id/t1RangedImageView"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_column="0"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_row="6"
        android:contentDescription="@string/t1_ranged_elves"
        android:src="@drawable/t1elvenranged" />

    <EditText
        android:id="@+id/resT1FootEditText"
        android:layout_width="72dp"
        android:layout_height="32dp"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_row="4"
        android:background="#DECDBD"
        android:ems="10"
        android:inputType="number"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/resT1MountedEditText"
        android:layout_width="72dp"
        android:layout_height="32dp"
        android:layout_column="1"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_row="5"
        android:background="#DECDBD"
        android:ems="10"
        android:inputType="number"
        android:textColor="#000000" />

    <EditText
        android:id="@+id/resT1RangedEditText"
        android:layout_width="72dp"
        android:layout_height="32dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_row="6"
        android:background="#DECDBD"
        android:ems="10"
        android:inputType="number"
        android:textColor="#000000" />
</GridLayout>